--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Ma Carte Live</title>
+    <button onclick="sendMacroDroidWebhook()">Déclencher Macro</button>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -101,6 +102,37 @@
     //    Répéter l'appel à fetchLatestCoordinates toutes les 5 secondes (5000 ms)
     setInterval(fetchLatestCoordinates, 5000);
 
+    async function sendMacroDroidWebhook() {
+      const webhookUrl = 'https://trigger.macrodroid.com/b923bfa9-4615-4ea1-bbc9-4161bd1a7167/locatephone';
+
+      // Données optionnelles à envoyer
+      const data = {
+        latitude: -18.8792,
+        longitude: 47.5079
+      };
+
+      try {
+        const response = await fetch(webhookUrl, {
+          method: 'POST', // tu peux aussi utiliser GET si tu n'envoies rien
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(data) // facultatif : envoie des coordonnées
+        });
+
+        if (response.ok) {
+          const text = await response.text(); // MacroDroid renvoie souvent un body vide
+          alert("Macro déclenché avec succès !");
+          console.log("Réponse de MacroDroid :", text);
+        } else {
+          alert("Erreur : " + response.status);
+          console.error("Réponse d’erreur :", response.status, await response.text());
+        }
+      } catch (error) {
+        alert("Erreur de connexion !");
+        console.error("Erreur réseau ou serveur :", error);
+      }
+    }
 </script>
 
 </body>
